Break up config file, add CRP, fuel switch, procedural tanks

--- a/GameData/GPOSpeedFuelPump.cfg
+++ b/GameData/GPOSpeedFuelPump.cfg
@@ -1,49 +1,14 @@
 // This config file REQUIRES ModuleManager to function!  Get it here: http://forum.kerbalspaceprogram.com/threads/55219
-//
-// By default, this file adds the Goodspeed Automatic Fuel Pump to anything that is not a command pod and contains LiquidFuel, Oxidizer,
-// MonoPropellant, and/or XenonGas and Ore. You may add additional resources below by copying one of these sections and editing the appropriate
-// resource identifier, or delete a section to stop ModuleManager from adding the pump to those kinds of parts. If you want the pump
-// added to your command pods too (most contain MonoPropellant these days), delete "!MODULE[ModuleCommand]," from each section below.
 
-@PART[*]:HAS[@RESOURCE[LiquidFuel],!MODULE[ModuleCommand],!MODULE[GPOSpeedPump]] // Since this catches LFO tanks...
-{
-	MODULE
-	{
-		name = GPOSpeedPump
-	}
-}
+// Resources have been split up into separate config files; please see the other files in this directory
 
-@PART[*]:HAS[@RESOURCE[MonoPropellant],!MODULE[ModuleCommand],!MODULE[GPOSpeedPump]]
-{
-	MODULE
-	{
-		name = GPOSpeedPump
-	}
-}
-
-@PART[*]:HAS[@RESOURCE[XenonGas],!MODULE[ModuleCommand],!MODULE[GPOSpeedPump]]
-{
-	MODULE
-	{
-		name = GPOSpeedPump
-	}
-}
-
-@PART[*]:HAS[@RESOURCE[Ore],!MODULE[ModuleCommand],!MODULE[GPOSpeedPump]]
-{
-	MODULE
-	{
-		name = GPOSpeedPump
-	}
-}
-
-// If you wish to only add the pump to specific parts, delete the stuff above this comment,
+// If you wish to only add the pump to specific parts, delete or rename the other config files,
 // then use the example below, replacing "ExamplePartName" with the name of a part.
 
-@PART[ExamplePartName]
-{
-	MODULE
-	{
-		name = GPOSpeedPump
-	}
-}
+//@PART[ExamplePartName]
+//{
+//	MODULE
+//	{
+//		name = GPOSpeedPump
+//	}
+//}
