--- a/GameData/FuelSwitch.cfg
+++ b/GameData/FuelSwitch.cfg
@@ -1,7 +1,7 @@
 // This config file REQUIRES ModuleManager to function!  Get it here: http://forum.kerbalspaceprogram.com/threads/55219
 
 // Interstellar Fuel Switch support
-@PART[*]:HAS[MODULE[InterstellarFuelSwitch],!MODULE[GPOSpeedPump]]:NEEDS[GPOSpeedFuelPump]:FINAL
+@PART[*]:HAS[@MODULE[InterstellarFuelSwitch],!MODULE[GPOSpeedPump]]:NEEDS[GPOSpeedFuelPump]:FINAL
 {
 	MODULE
 	{
