--- a/GameData/CommunityResourcePack.cfg
+++ b/GameData/CommunityResourcePack.cfg
@@ -3,512 +3,512 @@
 // Resources from the Community Resource Pack
 // http://forum.kerbalspaceprogram.com/index.php?/topic/83007-105-community-resource-pack-0470-20151114/
 
-@PART[*]:HAS[@RESOURCE[AK20],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[AK20],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[AK27],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[AK27],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Aerozine50],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Aerozine50],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Alumina],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Alumina],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Aluminium],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Aluminium],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Aniline],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Aniline],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Antimatter],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Antimatter],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[ArgonGas],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[ArgonGas],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[AvGas],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[AvGas],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Boron],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Boron],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[CarbonDioxide],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[CarbonDioxide],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[CaveaB],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[CaveaB],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Chemicals],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Chemicals],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[ClF3],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[ClF3],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[ClF5],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[ClF5],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Diborane],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Diborane],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Dirt],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Dirt],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Ethane],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Ethane],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Ethanol],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Ethanol],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Ethanol75],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Ethanol75],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Ethanol90],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Ethanol90],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Ethylene],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Ethylene],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[ExoticMinerals],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[ExoticMinerals],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[FLOX30],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[FLOX30],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[FLOX70],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[FLOX70],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[FLOX88],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[FLOX88],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Fertilizer],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Fertilizer],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Fluorine],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Fluorine],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Food],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Food],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Furfuryl],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Furfuryl],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[HTP],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[HTP],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Helium],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Helium],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Hydrates],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Hydrates],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Hydrazine],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Hydrazine],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Hydrogen],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Hydrogen],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Hydyne],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Hydyne],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[IRFNA-III],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[IRFNA-III],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[IRFNA-IV],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[IRFNA-IV],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[IWFNA],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[IWFNA],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[IntakeAtm],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[IntakeAtm],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[IntakeLqd],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[IntakeLqd],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Karbonite],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Karbonite],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Karborundum],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Karborundum],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Kerosene],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Kerosene],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[KryptonGas],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[KryptonGas],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Lead],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Lead],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[LeadBallast],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[LeadBallast],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Lithium],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Lithium],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[LqdAmmonia],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[LqdAmmonia],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[LqdCO],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[LqdCO],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[LqdCO2],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[LqdCO2],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[LqdDeuterium],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[LqdDeuterium],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[LqdFluorine],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[LqdFluorine],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[LqdHe3],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[LqdHe3],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[LqdHelium],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[LqdHelium],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[LqdHydrogen],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[LqdHydrogen],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[LqdMethane],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[LqdMethane],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[LqdNitrogen],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[LqdNitrogen],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[LqdOxygen],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[LqdOxygen],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[LqdTritium],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[LqdTritium],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[MMH],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[MMH],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[MON1],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[MON1],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[MON10],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[MON10],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[MON15],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[MON15],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[MON20],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[MON20],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[MON25],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[MON25],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[MON3],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[MON3],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Machinery],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Machinery],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[MaterialKits],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[MaterialKits],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[MetallicOre],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[MetallicOre],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Metals],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Metals],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Methane],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Methane],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Methanol],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Methanol],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Minerals],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Minerals],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Mulch],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Mulch],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[N2F4],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[N2F4],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[NTO],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[NTO],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[NeonGas],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[NeonGas],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Nitrogen],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Nitrogen],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[NitrousOxide],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[NitrousOxide],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[OF2],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[OF2],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Organics],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Organics],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Oxygen],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Oxygen],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Pentaborane],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Pentaborane],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Polymers],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Polymers],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[RareMetals],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[RareMetals],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Recyclables],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Recyclables],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Rock],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Rock],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[RocketParts],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[RocketParts],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[SpecializedParts],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[SpecializedParts],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Substrate],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Substrate],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Supplies],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Supplies],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Syntin],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Syntin],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Tonka250],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Tonka250],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Tonka500],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Tonka500],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[UDMH],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[UDMH],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[UH25],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[UH25],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Uraninite],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Uraninite],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[UraniumNitride],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[UraniumNitride],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Waste],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Waste],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[WasteWater],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[WasteWater],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
 }
-@PART[*]:HAS[@RESOURCE[Water],!MODULE[GPOSpeedPump]]{
+@PART[*]:HAS[@RESOURCE[Water],!MODULE[GPOSpeedPump]]:FINAL{
 MODULE {
 name=GPOSpeedPump
 }
