change NEEDS to FOR

--- a/GameData/FuelSwitch.cfg
+++ b/GameData/FuelSwitch.cfg
@@ -1,7 +1,7 @@
 // This config file REQUIRES ModuleManager to function!  Get it here: http://forum.kerbalspaceprogram.com/threads/55219
 
 // Interstellar Fuel Switch support
-@PART[*]:HAS[@MODULE[InterstellarFuelSwitch],!MODULE[GPOSpeedPump]]:NEEDS[GPOSpeedFuelPump]:FINAL
+@PART[*]:HAS[@MODULE[InterstellarFuelSwitch],!MODULE[GPOSpeedPump]]:FOR[GPOSpeedFuelPump]:FINAL
 {
 	MODULE
 	{
@@ -10,7 +10,16 @@
 }
 
 // Firespitter fuel switch support
-@PART[*]:HAS[@MODULE[FSfuelSwitch],!MODULE[GPOSpeedPump]]:NEEDS[GPOSpeedFuelPump]:FINAL
+@PART[*]:HAS[@MODULE[FSfuelSwitch],!MODULE[GPOSpeedPump]]:FOR[GPOSpeedFuelPump]:FINAL
+{
+	MODULE
+	{
+		name = GPOSpeedPump
+	}
+}
+
+// B9 fuel switch support
+@PART[*]:HAS[@MODULE[ModuleB9PartSwitch],!MODULE[GPOSpeedPump]]:FOR[GPOSpeedFuelPump]:FINAL
 {
 	MODULE
 	{
