Fix Modular Fuel Tanks

--- a/GameData/Patches/ModularFuelTanks.cfg
+++ b/GameData/Patches/ModularFuelTanks.cfg
@@ -8,3 +8,12 @@
 		name = GPOSpeedPump
 	}
 }
+
+// Modular Fuel Tanks
+@PART[*]:HAS[@MODULE[ModuleFuelTanks],!MODULE[GPOSpeedPump]]:FOR[GPOSpeedFuelPump]:NEEDS[RealFuels]:FINAL
+{
+	MODULE
+	{
+		name = GPOSpeedPump
+	}
+}
