--- a/GameData/Patches/StockResources.cfg
+++ b/GameData/Patches/StockResources.cfg
@@ -5,7 +5,7 @@
 // resource identifier, or delete a section to stop ModuleManager from adding the pump to those kinds of parts. If you want the pump
 // added to your command pods too (most contain MonoPropellant these days), delete "!MODULE[ModuleCommand]," from each section below.
 
-@PART[*]:HAS[@RESOURCE[LiquidFuel],!MODULE[ModuleCommand],!MODULE[GPOSpeedPump]] // Since this catches LFO tanks...
+@PART[*]:HAS[@RESOURCE[LiquidFuel],!MODULE[ModuleCommand],!MODULE[GPOSpeedPump]]:FOR[GPOSpeedFuelPump] // Since this catches LFO tanks...
 {
 	MODULE
 	{
@@ -13,7 +13,7 @@
 	}
 }
 
-@PART[*]:HAS[@RESOURCE[MonoPropellant],!MODULE[ModuleCommand],!MODULE[GPOSpeedPump]]
+@PART[*]:HAS[@RESOURCE[MonoPropellant],!MODULE[ModuleCommand],!MODULE[GPOSpeedPump]]:FOR[GPOSpeedFuelPump]
 {
 	MODULE
 	{
@@ -21,7 +21,7 @@
 	}
 }
 
-@PART[*]:HAS[@RESOURCE[XenonGas],!MODULE[ModuleCommand],!MODULE[GPOSpeedPump]]
+@PART[*]:HAS[@RESOURCE[XenonGas],!MODULE[ModuleCommand],!MODULE[GPOSpeedPump]]:FOR[GPOSpeedFuelPump]
 {
 	MODULE
 	{
@@ -29,7 +29,7 @@
 	}
 }
 
-@PART[*]:HAS[@RESOURCE[Ore],!MODULE[ModuleCommand],!MODULE[GPOSpeedPump]]
+@PART[*]:HAS[@RESOURCE[Ore],!MODULE[ModuleCommand],!MODULE[GPOSpeedPump]]:FOR[GPOSpeedFuelPump]
 {
 	MODULE
 	{
