--- a/GameData/Patches/FuelSwitch.cfg
+++ b/GameData/Patches/FuelSwitch.cfg
@@ -19,7 +19,7 @@
 }
 
 // B9 fuel switch support
-@PART[*]:HAS[@MODULE[ModuleB9PartSwitch],!MODULE[GPOSpeedPump]]:FOR[GPOSpeedFuelPump]:FINAL
+@PART[*]:HAS[@MODULE[ModuleB9PartSwitch],!MODULE[GPOSpeedPump]]:FOR[GPOSpeedFuelPump]:AFTER[zzz_CryoTanks]:FINAL
 {
 	MODULE
 	{
