fixes for ModuleManager ordering

--- a/GameData/Patches/ModularFuelTanks.cfg
+++ b/GameData/Patches/ModularFuelTanks.cfg
@@ -1,7 +1,7 @@
 // This config file REQUIRES ModuleManager to function!  Get it here: http://forum.kerbalspaceprogram.com/threads/55219
 
 // Modular Fuel Tanks
-@PART[*]:HAS[@MODULE[ModuleFuelTanks],!MODULE[GPOSpeedPump]]:FOR[GPOSpeedFuelPump]:NEEDS[ModularFuelTanks]:FINAL
+@PART[*]:HAS[@MODULE[ModuleFuelTanks],!MODULE[GPOSpeedPump]]:NEEDS[ModularFuelTanks]:FINAL
 {
 	MODULE
 	{
@@ -10,7 +10,7 @@
 }
 
 // Modular Fuel Tanks
-@PART[*]:HAS[@MODULE[ModuleFuelTanks],!MODULE[GPOSpeedPump]]:FOR[GPOSpeedFuelPump]:NEEDS[RealFuels]:FINAL
+@PART[*]:HAS[@MODULE[ModuleFuelTanks],!MODULE[GPOSpeedPump]]:NEEDS[RealFuels]:FINAL
 {
 	MODULE
 	{
