--- a/GameData/Patches/ProceduralTanks.cfg
+++ b/GameData/Patches/ProceduralTanks.cfg
@@ -1,7 +1,7 @@
 // This config file REQUIRES ModuleManager to function!  Get it here: http://forum.kerbalspaceprogram.com/threads/55219
 
 // Procedural tank support
-@PART[proceduralTank*]:HAS[!MODULE[GPOSpeedPump]]:FOR[GPOSpeedFuelPump]:FINAL
+@PART[proceduralTank*]:HAS[!MODULE[GPOSpeedPump]]:NEEDS[ProceduralParts]:FINAL
 {
 	MODULE
 	{
