--- a/GameData/Patches/StationScience.cfg
+++ b/GameData/Patches/StationScience.cfg
@@ -3,7 +3,7 @@
 // Resources from Station Science
 // http://forum.kerbalspaceprogram.com/index.php?/topic/50145-104-station-science-v15/
 
-@PART[*]:HAS[@RESOURCE[Kibbal],!MODULE[GPOSpeedPump]]:FOR[GPOSpeedFuelPump]:FINAL
+@PART[*]:HAS[@RESOURCE[Kibbal],!MODULE[GPOSpeedPump]]:NEEDS[StationScience]:AFTER[StationScience]
 {
   MODULE {
     name=GPOSpeedPump
