--- a/GameData/Patches/StationScience.cfg
+++ b/GameData/Patches/StationScience.cfg
@@ -5,7 +5,8 @@
 
 @PART[*]:HAS[@RESOURCE[Kibbal],!MODULE[GPOSpeedPump]]:NEEDS[StationScience]:AFTER[StationScience]
 {
-  MODULE {
-    name=GPOSpeedPump
-  }
+	MODULE
+	{
+		name=GPOSpeedPump
+	}
 }
