Fix B9 fuel switch, thanks steve_v

--- a/GameData/Patches/FuelSwitch.cfg
+++ b/GameData/Patches/FuelSwitch.cfg
@@ -19,7 +19,7 @@
 }
 
 // B9 fuel switch support
-@PART[*]:HAS[@MODULE[ModuleB9PartSwitch],!MODULE[GPOSpeedPump]]:NEEDS[B9PartSwitch]:FINAL
+@PART[*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]],!MODULE[GPOSpeedPump]]:NEEDS[B9PartSwitch]:FINAL
 {
 	MODULE
 	{
